--- a/useStateHook_Project/src/App.css
+++ b/useStateHook_Project/src/App.css
@@ -15,3 +15,19 @@ h1{
 .form{
   margin-top: 50px ;
 }
+.data{
+  margin-top: 14px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.info{
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 0px 10px 0px 10px;
+  align-items: center;
+}
