--- a/src/React_Router/App.css
+++ b/src/React_Router/App.css
@@ -4,29 +4,36 @@
   flex-direction: column;
   align-items: center;
 }
-h1 h2{
-    margin: 0;
-    text-align: center;
+h1{
+     margin: 0;
+    color: white;
     display: flex;
     justify-content: center;
   }
-  .header{
-    background-color: #1015ac;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 8px;
-    width: 100%;
-  }
-  .data-heading{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-
-  }
-  .data{
-    display: flex;
-    width: 80%;
-    justify-content: space-evenly;
-    padding: 10px;
-    overflow-x: hidden;
-  }
+.info{
+  display: flex;
+    /* justify-content: space-around; */
+    flex-direction: row;
+}
+h2{
+  color: white;
+  padding: 0 12vw 0 15vw;
+}
+.header{
+  background-color: #1015ac;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 8px;
+  width: 100%;
+}
+.data-heading{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.data{
+  display: flex;
+  width: 80%;
+  justify-content: space-evenly;
+  padding: 10px;
+  overflow-x: hidden;
+}
